# ray-tracer

./: .gitignore  .travis.yml  README.md  bors.toml  docker-compose.yml
.buildkite/: pipeline.yml
.github/: dependabot.yml
rust/: .gitignore  Cargo.toml
rust/benches/: matrix_bench.rs  world_demo_bench.rs
rust/proptest-regressions/: matrix.txt
rust/src/: canvas.rs  color.rs  coordinate.rs  lib.rs  matrix.rs  naive_cmp.rs  ppm.rs  ray.rs  shader.rs  transformation.rs  world.rs
