[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Ryan James Spencer <spencer.ryanjames@gmail.com>"]
edition = "2018"

[dependencies]
smallvec = "0.6.9"
proptest = "0.9.6"
# This is useful for ray intersections, but should be compared against smallvec
#binary-heap-plus = "0.2.0"

[profile.release]
lto = true
panic = "abort"
#rustflags = ["-C", "target-cpu=native"]
#codegen-units = 1
